CSS Chrome Fixes
Fixed overlapping of first two question divs, height of questionnaire container, and center align primary question h1.

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ body {
 .section-container {
   padding-left: 5%;
   padding-right: 5%;
+  display: block; /* To fix Chrome/Safari issue with first section divs overlapping */
 }
 
 /* For testing */
@@ -100,7 +101,6 @@ body {
   flex-direction: column;
   justify-content: flex-start;
 
-  height: 100%;
   padding: 0;
   margin: 0;
 }
@@ -121,6 +121,7 @@ body {
   margin-top: 30px;
   margin-bottom: 15px;
   font-size: 24px;
+  text-align: center;
 }
 
 /* Margin to next question */
